--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Reset básico para remover estilos padrões */
+
 * {
   margin: 0;
   padding: 0;
@@ -20,7 +20,7 @@ header {
 }
 
 header .logo {
-  width: 50px; /* Ajuste conforme o tamanho do seu logo */
+  width: 50px; 
   vertical-align: middle;
   margin-right: 15px;
 }
@@ -70,7 +70,7 @@ header .logo {
   border: 1px solid #ddd;
   border-radius: 10px;
   overflow: hidden;
-  width: 200px; /* Largura do card */
+  width: 200px; 
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   transition: transform 0.2s;
 }
@@ -81,7 +81,7 @@ header .logo {
 
 .card-produto img {
   width: 100%;
-  height: 200px; /* Altura fixa para as imagens */
+  height: 200px; 
   object-fit: cover;
 }
 
